# knotchmcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
docs/plans/: 2026-04-22-knotch-mcp-design.md  2026-04-22-knotch-mcp-plan.md
src/knotch_mcp/: __init__.py  __main__.py  config.py  deal_analysis.py  log.py  models.py  nicknames.py  rate_limit.py  server.py  team_activity.py  tools.py
src/knotch_mcp/clients/: apollo.py  clay.py  hubspot.py
tests/: conftest.py  test_apollo.py  test_clay.py  test_deal_analysis.py  test_hubspot.py  test_log.py  test_models.py  test_rate_limit.py  test_server.py  test_tools.py
